@startuml
hide circle
skinparam classAttributeIconSize 0
class Storage {
    - {static} GOAL_STORAGE_FILENAME:String = "goal-store.csv"
    - {static} CATEGORY_STORAGE_FILENAME:String = "category-store.csv"
    - {static} INCOME_STORAGE_FILENAME:String = "income-store.csv"
    - {static} EXPENSE_STORAGE_FILENAME:String = "expense-store.csv"
    - {static} DATE_PATTERN:String = "dd/MM/yyyy"
    - {static} FORMATTER:DateTimeFormatter = DateTimeFormatter.ofPattern(DATE_PATTERN)
    - {static} FAILED_CONVERT_TO_NON_NEG_DOUBLE:String = "Cannot convert amount into Double type in "
    - {static} FAILED_CONVERT_TO_LOCALDATE:String = "Cannot convert date into LocalDate type in "
    - {static} FAILED_CONVERT_BOOLEAN:String = "Cannot convert string into boolean type in "
    - {static} GOAL_HEADER:String[] = {"Description", "Amount"}
    - {static} CATEGORY_HEADER:String[] = {"Name"}
    - {static} INCOME_HEADER:String[] = {"Description", "Amount", "Date", "Goal", "Recurrence", "Has Next Recurrence"}
    - {static} EXPENSE_HEADER:String[] = {"Description", "Amount", "Date", "Category", "Recurrence", "Has Next Reccurence"}
    - {static} DESCRIPTION:int = 0
    - {static} AMOUNT:int = 1
    - {static} DATE:int = 2
    - {static} GOAL:int = 3
    - {static} CATEGORY:int = 3
    - {static} RECURRENCE:int = 4
    - {static} HAS_NEXT_RECURRENCE:int = 5
    ----
    + Storage()
    + validRow(row:String[]):boolean
    + validDate(dateStr:String, fileName:String):LocalDate
    + validBoolean(booleanStr:String):boolean
    + convertToGoal(name:String):GOAL
    + convertToCategory(name:String):Category
    + prepareTransaction(description:String, amount:double, date:LocalDate, recurrence:String, hasRecurrence:String):Transaction
    + loadGoal()
    + loadCategory()
    + loadIncome()
    + loadExpense()
    + load()
    + saveGoal()
    + saveCategory()
    + saveIncome()
    + saveExpense()
    + save()
}

class CsvReader {
    + CsvReader(filePath:String)
    + readLine():String[]
    + close()
}

package "com.opencsv" #DDDDDD {
    class CSVReader {
        + readNext():String[]
    }
    class CSVWriter {
        + writeNext(data:String[])
    }
}

class CsvWriter {
    + CsvWriter(fullPath:String)
    + CsvWriter(fullPath:String, isAppend:boolean)
    + write(data:String[])
    + close()
}

CsvReader ---> "0..1" CSVReader : > have
CsvWriter --> "0..1" CSVWriter : > have

Storage --> "0..4" CsvReader : > uses
Storage --> "0..4" CsvWriter : > uses

note left of "com.opencsv"
    This is an 3rd Party Library (OpenCSV)
endnote
@enduml
